# fptn

./: CMakeLists.txt
.github/workflows/: build-openwrt-ipk.yml  build-openwrt-sdk.yml  build-openwrt24-ipk.yml  build-yes.yml  build.yml  build1.yml  openwrt.yml  windows-hosted.yml
depends/cmake/: FetchLibTunTap.cmake  NtpClient.cmake
files/: client.conf  fptn-client.init
openwrt/package/fptn-client-cli/: Makefile
package/fptn/: Makefile
package/fptn/files/: client.conf.example  fptn-route.sh  fptn.config  fptn.init
package/fptn/patches/: 001-disable-fetchcontent-base64.patch  001-disable-fetchcontent.patch  001-disable-werror.patch  001-openssl.patch  001-tls-mbedtls.patch  002-client-only.patch  002-disable-all-fetchcontent.patch  002-protobuf.patch  003-absl-optional.patch  003-curl.patch  004-libuv.patch
src/compat/: openssl_keylog_compat.h
src/fptn-client/: CMakeLists.txt
src/fptn-client/gui/miniwidget/: miniwidget.cpp  miniwidget.h
src/fptn-client/gui/style/: style.cpp
src/fptn-client/gui/tray/: tray.cpp  tray.h
src/fptn-protocol-lib/: CMakeLists.txt
